--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -13,7 +13,7 @@
     "test": "./node_modules/.bin/mocha tests/helpers/setup.js tests/**/*.spec.js --require @babel/register",
     "test:watch": "npm test -- --watch",
     "test:coverage": "nyc npm test",
-    "build": "./node_modules/.bin/webpack --config webpack.config.prod.js -p",
+    "build": "./node_modules/.bin/webpack --config webpack.config.js -p",
     "analyze": "BUNDLE_ANALYZE=true ./node_modules/.bin/webpack --config webpack.config.prod.js -p"
   },
   "files": [
@@ -77,6 +77,7 @@
     "react-test-renderer": "^16.0.0",
     "sinon": "^7.1.0",
     "styled-components": "^4.1.3",
+    "terser-webpack-plugin": "^5.3.7",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.1.2",
@@ -85,17 +86,17 @@
   "dependencies": {
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "flatted": "^2.0.0",
     "onchange": "^5.2.0",
     "prettier": "^1.16.4",
-    "flatted": "^2.0.0",
     "prop-types": "^15.6.0",
     "random-id": "0.0.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
   "peerDependencies": {
-    "styled-components": "^4.0.0",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "styled-components": "^4.0.0"
   }
 }
